--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html manifest="cache.manifest"><!--  -->
 <head>
-    <title>Download Station</title>
+    <title>اللـــــــيـــــــــزر</title>
     <link rel="shortcut icon" href="favicon.ico"></link>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="balloon.min.css" >
@@ -13,19 +13,15 @@
 
 <body>
 <div style="text-align:center">
-<h1 style="font-size:40px;color:white;text-shadow: 4px 4px 4px #326cb3;">تم التطوير من قبل </h1>
+<h1 style="font-size:40px;color:white;text-shadow: 4px 4px 4px #326cb3;">   " اللـــــــيـــــــــزر "   </h1>
 <div style="text-align:center">
-<h1 style="font-size:40px;color:white;text-shadow: 4px 4px 4px #326cb3;">Download Station - by - Wisam Alzataf</h1>
-<div style="text-align:center">
-<h1 style="font-size:40px;color:white;text-shadow: 4px 4px 4px #326cb3;"> facebook.com/DownloadStationLY  زورونا على صفحتنا  </h1>
-<div style="text-align:center">
-<h1 style="font-size:40px;color:white;text-shadow: 4px 4px 4px #326cb3;"> 092-5016689 </h1>
+<h1 style="font-size:40px;color:white;text-shadow: 4px 4px 4px #326cb3;"> Facebook.com/Ellizer2005  زورونا على صفحتنا  </h1>
 
 
   
 
-<h1 style='margin-bottom:40px;'></h1>
-<button aria-label="Jailbreak + Goldhen " data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=goldhen_755.js"><img src="hen.png" ></a>
+<h1 style='margin-bottom:50px;'></h1>
+<button aria-label="اللـــــــيـــــــــزر " data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=goldhen_755.js"><img src="hen.png" ></a>
 <button aria-label="App2USB" data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=app2usb.js"><img src="app2usb.png" ></a>
 <button aria-label="Disable Updates" data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=disableupdates.js"><img src="disableupdates.png" ></a>
 <button aria-label="Enable Updates" data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=enableupdates.js"><img src="enableupdates.png" ></a>
@@ -39,7 +35,8 @@
 </div>
 
 
-
+<h1 style="text-align:center;font-size:20px;color:white;text-shadow: 4px 4px 4px #f3c108"> </h1>
+<h1 style="text-align:center;font-size:20px;color:white;text-shadow: 4px 4px 4px #de0029"> </h1>
 
 
 
