--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html manifest="cache.manifest"><!--  -->
 <head>
-    <title>اللـــــــيـــــــــزر</title>
+    <title>Download Station</title>
     <link rel="shortcut icon" href="favicon.ico"></link>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="balloon.min.css" >
@@ -13,30 +13,22 @@
 
 <body>
 <div style="text-align:center">
-<h1 style="font-size:40px;color:white;text-shadow: 4px 4px 4px #326cb3;">   " اللـــــــيـــــــــزر "   </h1>
+<h1 style="font-size:40px;color:white;text-shadow: 4px 4px 4px #326cb3;">Download Station - by - Wisam Alzataf  تم التطوير من قبل </h1>
 <div style="text-align:center">
-<h1 style="font-size:40px;color:white;text-shadow: 4px 4px 4px #326cb3;"> Facebook.com/Ellizer2005  زورونا على صفحتنا  </h1>
+<h1 style="font-size:40px;color:white;text-shadow: 4px 4px 4px #326cb3;"> facebook.com/DownloadStationLY  زورونا على صفحتنا  </h1>
+<div style="text-align:center">
+<h1 style="font-size:40px;color:white;text-shadow: 4px 4px 4px #326cb3;"> 092-5016689 </h1>
 
 
   
 
-<h1 style='margin-bottom:50px;'></h1>
-<button aria-label="اللـــــــيـــــــــزر " data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=goldhen_755.js"><img src="hen.png" ></a>
-<button aria-label="App2USB" data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=app2usb.js"><img src="app2usb.png" ></a>
-<button aria-label="Disable Updates" data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=disableupdates.js"><img src="disableupdates.png" ></a>
-<button aria-label="Enable Updates" data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=enableupdates.js"><img src="enableupdates.png" ></a>
-<button aria-label="Dumper" data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=dumper.js"><img src="dumper.png" ></a>
-<button aria-label="Backup" data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=backup.js"><img src="backup.png" ></a>
-<button aria-label="Restore" data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=restore.js"><img src="restore.png" ></a>
-<button aria-label="FTP" data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=ftp.js"><img src="ftp.png" ></a>
-<button aria-label="Todex" data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=todex.js"><img src="todex.png" ></a>
-<button aria-label="Fan-Control" data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=fan-control.js"><img src="fan.png" ></a></button>
-<select id="tempC" ></select>°C
+<h1 style='margin-bottom:30px;'></h1>
+<button aria-label="Jailbreak + Goldhen " data-balloon-pos="up"><a href="payload.html#p0=mira.js&p1=goldhen_755.js"><img src="hen.png" ></a>
+
 </div>
 
 
-<h1 style="text-align:center;font-size:20px;color:white;text-shadow: 4px 4px 4px #f3c108"> </h1>
-<h1 style="text-align:center;font-size:20px;color:white;text-shadow: 4px 4px 4px #de0029"> </h1>
+
 
 
 
